# cook

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCS_SETUP.md  EXEC_SECURITY.md  EXEC_SECURITY_SUMMARY.md  LICENSE  MCP_SERVER.md  MIGRATION_SUMMARY.md  README.md  SECURITY.md  cook-mcp-config.json  mkdocs.yml  pyproject.toml  pytest.ini
cook/: __init__.py  logging.py
cook/cli/: main.py
cook/core/: __init__.py  executor.py  resource.py
cook/mcp/: __init__.py  server.py
cook/monitor/: __init__.py  drift.py
cook/record/: __init__.py  generator.py  parser.py  recorder.py  watcher.py
cook/resources/: exec.py  file.py  pkg.py  repository.py  service.py
cook/state/: __init__.py  store.py
cook/transport/: __init__.py  base.py  lima.py  local.py  ssh.py
docs/: LOGGING.md  README.md  index.md
docs/api/: core.md  resources.md  transport.md
docs/examples/: minimidia.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/resources/: exec.md  file.md  index.md  package.md  repository.md  service.md
examples/: README.md  exec_security_demo.py  lemp-stack.py  nginx-reload.py  simple.py  web-server.py  wordpress-pgsql.py  wordpress.py
examples/minimidia/: README.md  minimidia-env.py  minimidia.py
examples/multi-server/: README.md  database.py
scripts/: comprehensive-vm-test.sh  run-vm-tests.sh
site/: 404.html  index.html  objects.inv  sitemap.xml
site/LOGGING/: index.html
site/api/core/: index.html
site/resources/: index.html
site/search/: search_index.json
tests/: README.md  __init__.py
tests/integration/: test_basic_workflow.py  test_repository.py
tests/lima/: ubuntu.yaml  wordpress-demo.yaml
tests/unit/: test_executor.py  test_repository.py  test_resources.py
(+15 files in other folders)
